--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,11 @@ on: push
 jobs:
   report:
     runs-on: ubuntu-latest
+    
+    container:
+      image: FEniCS/dolfinx
+      # image: junyuuuu/python-selenium-chrome:1.0.3
+      
     steps:
       - uses: actions/checkout@v1
 
