--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,19 +3,162 @@ name: Run sample 1000 for edp project
 on: push
 
 jobs:
-  report:
+  task1:
+    name: task1
     runs-on: ubuntu-latest
-    
     container:
       image: unifem/fenics-desktop
-      
     steps:
       - uses: actions/checkout@v1
-
       - name: Run Script
         run: |
           mkdir ./project/results
-          python3 ./project/sample_1000.py
+          python3 ./project/sample_1000.py --task 1
+      - name: Commit files
+        id: commit
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "github-actions"
+          git add --all
+          if [-z "$(git status --porcelain)"]; then
+             echo "::set-output name=push::false"
+          else
+             git commit -m "Add changes" -a
+             echo "::set-output name=push::true"
+          fi
+        shell: bash
+      - name: Push changes
+        if: steps.commit.outputs.push == 'true'
+        uses: ad-m/github-push-action@master
+        with:
+           github_token: ${{ secrets.GITHUB_TOKEN }}
+  task2:
+    name: task2
+    runs-on: ubuntu-latest
+    container:
+      image: unifem/fenics-desktop
+    steps:
+      - uses: actions/checkout@v1
+      - name: Run Script
+        run: |
+          mkdir ./project/results
+          python3 ./project/sample_1000.py --task 2
+      - name: Commit files
+        id: commit
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "github-actions"
+          git add --all
+          if [-z "$(git status --porcelain)"]; then
+             echo "::set-output name=push::false"
+          else
+             git commit -m "Add changes" -a
+             echo "::set-output name=push::true"
+          fi
+        shell: bash
+      - name: Push changes
+        if: steps.commit.outputs.push == 'true'
+        uses: ad-m/github-push-action@master
+        with:
+           github_token: ${{ secrets.GITHUB_TOKEN }}
+  task3:
+    name: task3
+    runs-on: ubuntu-latest
+    container:
+      image: unifem/fenics-desktop
+    steps:
+      - uses: actions/checkout@v1
+      - name: Run Script
+        run: |
+          mkdir ./project/results
+          python3 ./project/sample_1000.py --task 3
+      - name: Commit files
+        id: commit
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "github-actions"
+          git add --all
+          if [-z "$(git status --porcelain)"]; then
+             echo "::set-output name=push::false"
+          else
+             git commit -m "Add changes" -a
+             echo "::set-output name=push::true"
+          fi
+        shell: bash
+      - name: Push changes
+        if: steps.commit.outputs.push == 'true'
+        uses: ad-m/github-push-action@master
+        with:
+           github_token: ${{ secrets.GITHUB_TOKEN }}
+  task4:
+    name: task4
+    runs-on: ubuntu-latest
+    container:
+      image: unifem/fenics-desktop
+    steps:
+      - uses: actions/checkout@v1
+      - name: Run Script
+        run: |
+          mkdir ./project/results
+          python3 ./project/sample_1000.py --task 4
+      - name: Commit files
+        id: commit
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "github-actions"
+          git add --all
+          if [-z "$(git status --porcelain)"]; then
+             echo "::set-output name=push::false"
+          else
+             git commit -m "Add changes" -a
+             echo "::set-output name=push::true"
+          fi
+        shell: bash
+      - name: Push changes
+        if: steps.commit.outputs.push == 'true'
+        uses: ad-m/github-push-action@master
+        with:
+           github_token: ${{ secrets.GITHUB_TOKEN }}
+  task5:
+    name: task5
+    runs-on: ubuntu-latest
+    container:
+      image: unifem/fenics-desktop
+    steps:
+      - uses: actions/checkout@v1
+      - name: Run Script
+        run: |
+          mkdir ./project/results
+          python3 ./project/sample_1000.py --task 5
+      - name: Commit files
+        id: commit
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "github-actions"
+          git add --all
+          if [-z "$(git status --porcelain)"]; then
+             echo "::set-output name=push::false"
+          else
+             git commit -m "Add changes" -a
+             echo "::set-output name=push::true"
+          fi
+        shell: bash
+      - name: Push changes
+        if: steps.commit.outputs.push == 'true'
+        uses: ad-m/github-push-action@master
+        with:
+           github_token: ${{ secrets.GITHUB_TOKEN }}
+  task6:
+    name: task6
+    runs-on: ubuntu-latest
+    container:
+      image: unifem/fenics-desktop
+    steps:
+      - uses: actions/checkout@v1
+      - name: Run Script
+        run: |
+          mkdir ./project/results
+          python3 ./project/sample_1000.py --task 6
       - name: Commit files
         id: commit
         run: |
