--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,7 +59,9 @@ jobs:
         shell: bash
       - name: Create Pull Request
         id: cpr
-        uses: peter-evans/create-pull-request@v3
+        run:
+            git remote -v
+            git pull origin ${{github.ref}}
       - name: Push changes
         if: steps.commit.outputs.push == 'true'
         uses: ad-m/github-push-action@master
